stop the boxes from overlapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,7 @@ a:hover {
 		background-color: rgb(244,244,244);
 	}
 	.get-involved {
-		bottom: -8.5em;
+		bottom: -11.5em;
 	}
 }	
 
